--- a/src/components/MidHome/styles.css
+++ b/src/components/MidHome/styles.css
@@ -4,7 +4,7 @@
     background-color: rgb(107, 195, 224);
 }
 
-container{
+#player{
     margin: auto;
     width: 36.5%;
     border: 20px solid rgb(107, 195, 224);
